# aoc2019

./: CMakeLists.txt  LICENSE
day1/: CMakeLists.txt  part1.c  part2.c
day2/: CMakeLists.txt  part1.c  part2.c
day3/: CMakeLists.txt  line.c  line.h  part1.c  part1_and_2.c
day4/: CMakeLists.txt  input.txt  part1_and_2.c
day5/: CMakeLists.txt  part1_and_2.c
